fixed problem with table not fitting onto screen only on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,9 +67,11 @@ nav a:hover {
     color: rgb(255,0,0);
 }
 
-.table td, .table th {
+@media screen and (min-width: 100px) and (max-width: 700px) {
+  .table td, .table th {
     padding: 5px;
     vertical-align: top;
+}
 }
 
 /*--About--*/
